// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title tests is a basic snapshot 1`] = `
<h6
  class="leading-[1.25] -tracking-[0.01em] text-300 sm:text-400 font-bold "
>
  Title
</h6>
`;

exports[`Title tests is a snapshot with header level 2 1`] = `
<h6
  class="leading-[1.25] -tracking-[0.01em] text-400 sm:text-500 md:text-600 font-bold "
>
  Title
</h6>
`;

exports[`Title tests is a snapshot with html element h5 1`] = `
<h5
  class="leading-[1.25] -tracking-[0.01em] text-400 sm:text-500 font-bold "
>
  Title
</h5>
`;
